test/tests/stages/13_floating-point_numbers/valid/libraries/extern_double_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  extern
  double
  identifier(d)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(d)
  ==
  const double(1e20)
  ;
  }
