test/tests/stages/13_floating-point_numbers/invalid_types/complement_double.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  ~
  const double(10.0)
  ;
  return
  const int(0)
  ;
  }
